getGroup endpoint
